php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #25800 unable to parse url http://1.2.3.4:/abc.def...
Submitted: 2003-10-09 03:13 UTC Modified: 2003-10-13 00:29 UTC
From: xuefer at 21cn dot com Assigned:
Status: Closed Package: URL related
PHP Version: 4.3.3 OS: linux
Private report: No CVE-ID: None
 [2003-10-09 03:13 UTC] xuefer at 21cn dot com
Description:
------------
parse_url(http://1.2.3.4:/abc.asp?a=1&b=2): Unable to parse url
the empty port make parse_url failed
but browsers treat this url ok


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-10-13 00:29 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC