Fixed bug #25800 (parse_url() could not parse urls with empty port).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@142309 c90b9560-bf6c-de11-be94-00142212c4b1